--- a/CSSFiles/aboutPage.css
+++ b/CSSFiles/aboutPage.css
@@ -1,7 +1,137 @@
+/*Navigation ######################################################################################################## */
+#mainMenu {
+    z-index: 1000;
+}
+
+#mainMenu #toggle {
+    display: block;
+    width: 28px;
+    height: 30px;
+    margin: 30px auto 10px;
+    padding-left: 83%;
+}
+
+#mainMenu #toggle span:after,
+#mainMenu #toggle span:before {
+    content: "";
+    position: absolute;
+    left: 0;
+    top: -9px;
+
+}
+
+#mainMenu #toggle span:after {
+    top: 9px;
+}
+
+#mainMenu #toggle span {
+    position: relative;
+    display: block;
+}
+
+#mainMenu #toggle span,
+#mainMenu #toggle span:after,
+#mainMenu #toggle span:before {
+    width: 100%;
+    height: 5px;
+    background-color: white;
+    transition: all 0.3s;
+    backface-visibility: hidden;
+    border-radius: 2px;
+}
+
+#mainMenu #toggle.on span {
+    background-color: transparent;
+}
+
+#mainMenu #toggle.on span:before {
+    transform: rotate(45deg) translate(5px, 5px);
+}
+
+#mainMenu #toggle.on span:after {
+    transform: rotate(-45deg) translate(7px, -8px);
+}
+
+#mainMenu #toggle.on + #menu {
+    opacity: 1;
+    visibility: visible;
+}
+
+#mainMenu #menu{
+    position: relative;
+    left: 41.5%;
+    color: white;
+    width: 200px;
+    padding: 10px;
+    margin: auto;
+    font-family: "Segoe UI", Candara, "Bitstream Vera Sans", "DejaVu Sans", "Bitstream Vera Sans", "Trebuchet MS", Verdana, "Verdana Ref", sans-serif;
+    text-align: center;
+    border-radius: 40px;
+    background: white;
+    box-shadow: 0 1px 8px rgba(0, 0, 0, 0.05);
+    opacity: 0;
+    visibility: hidden;
+    transition: opacity .4s;
+}
+
+#mainMenu #menu:after {
+    position: absolute;
+    top: -15px;
+    left: 95px;
+    content: "";
+    display: block;
+    border-left: 15px solid transparent;
+    border-right: 15px solid transparent;
+    border-bottom: 20px solid white;
+}
+
+#mainMenu ul, li, li a {
+    list-style: none;
+    display: block;
+    margin: 0;
+    padding: 0;
+
+}
+
+#mainMenu li a {
+    padding: 5px;
+    color: #888;
+    text-decoration: none;
+    transition: all .2s;
+}
+
+#mainMenu li a:hover,
+#mainMenu li a:focus {
+    background: #555;
+    color: #fff;
+}
+
 #topbar {
     background-color: #191919;
     margin: 0px;
     padding: 0px;
     width: 100%;
 
+}
+
+body {
+    background-color: #191919 !important;
+}
+
+
+@media(min-width:768px) {
+    section {
+        padding: 150px 0;
+    }
+}
+
+
+.img-valign {
+    vertical-align: middle;
+    margin-bottom: 0.75em;
+}
+
+.text2 {
+    font-size: 24px;
+    float: right;
 }
