--- a/CSSFiles/homePage.css
+++ b/CSSFiles/homePage.css
@@ -66,8 +66,8 @@
     margin: auto;
     font-family: "Segoe UI", Candara, "Bitstream Vera Sans", "DejaVu Sans", "Bitstream Vera Sans", "Trebuchet MS", Verdana, "Verdana Ref", sans-serif;
     text-align: center;
-    border-radius: 40px;
     background: white;
+    border-radius: 3px;
     box-shadow: 0 1px 8px rgba(0, 0, 0, 0.05);
     opacity: 0;
     visibility: hidden;
@@ -146,7 +146,7 @@ video {
 /* ###################################################################################################################*/
 
 #custom-message {
-    font-family: 'Open Sans Condensed', 'Arial Narrow', serif;
+    font-family: 'Nobile Medium', 'Arial Narrow', serif;
     font-size: 40px;
     color: white;
     z-index: 10000 !important;
